# CutBranching

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  centrality_bench.cpp  dimacs_bench.cpp  main.cpp  oct_bench.cpp  oct_reduction.h  read_branch_order.h  read_dimacs.h  read_oct.h  read_pace.h  read_web_graph.h  validate_sol.h  write_branch_order.h  write_graph.h  write_sol.h
Ausarbeitung/: .gitignore  bachelorarbeit.tex  literatur.bib
IO/: read_graph.h  read_web_graph.h  write_sol.h  write_solution.h
SEA_Paper/: references.bib  sea_branching.tex
SEA_Paper/plots/: all_decomposition_based_branch.pgf  all_decomposition_based_time.pgf  all_reduction_based_branch.pgf  all_reduction_based_time.pgf  decomposition_based.tex  decomposition_based_branches.tex  decomposition_based_time.tex  dimacs_decomposition_based_branch.pgf  dimacs_decomposition_based_time.pgf  dimacs_reduction_based_branch.pgf  dimacs_reduction_based_time.pgf  metis.tex  pace_decomposition_based_branch.pgf  pace_decomposition_based_time.pgf  pace_reduction_based_branch.pgf  pace_reduction_based_time.pgf  reduction_based.tex  reduction_based_branches.tex  reduction_based_time.tex  sn_decomposition_based_branch.pgf  sn_decomposition_based_time.pgf  sn_reduction_based_branch.pgf  sn_reduction_based_time.pgf
VieCut/lib/algorithms/flow/: excess_scaling.h  preflow_push.h  push_relabel.h  unit_flow.h
VieCut/lib/algorithms/global_mincut/: minimum_cut.h  minimum_cut_helpers.h  noi_minimum_cut.h  padberg_rinaldi.h  viecut.h
VieCut/lib/algorithms/misc/: graph_algorithms.h  strongly_connected_components.h
VieCut/lib/algorithms/multicut/: multicut_problem.h
VieCut/lib/coarsening/: contract_graph.h  contraction_tests.h  label_propagation.h
VieCut/lib/common/: configuration.h  definitions.h
VieCut/lib/data_structure/: flow_graph.h  graph_access.h  mutable_graph.h
VieCut/lib/data_structure/priority_queues/: bucket_pq.h  fifo_node_bucket_pq.h  maxNodeHeap.h  node_bucket_pq.h  priority_queue_interface.h  vecMaxNodeHeap.h
VieCut/lib/io/: graph_io.h
VieCut/lib/tools/: graph_extractor.h  macros_assertions.h  random_functions.h  string.h
algo/: branch_and_reduce_algorithm.cpp  branch_and_reduce_algorithm.h  definitions.h  id_queue.h  max_flow.h  modified.cpp  modified.h
algo/data_structures/: ArraySet.h  dyn_fast_set.h  maxNodeHeap.h  priority_queue_interface.h
algo/separator_refinement/: fm_ns_local_search.cpp  fm_ns_local_search.h  partial_boundary.h
algo/tools/: debug_info_logger.h  random_functions.h
demo_instances/: .gitignore
schriftliche Ausarbeitung/: .gitignore  BA.tex  literatur.bib
